update summary word for french (#535)

--- a/conf/locale/fr/LC_MESSAGES/mako.po
+++ b/conf/locale/fr/LC_MESSAGES/mako.po
@@ -10217,7 +10217,7 @@ msgstr "Dates à venir"
 #: themes/st-lutherx/lms/templates/courseware/accordion.html
 #: themes/st-normanx/lms/templates/courseware/accordion.html
 msgid "Overview"
-msgstr "Vérifier"
+msgstr "Sommaire"
 
 #: openedx/features/course_experience/templates/course_experience/course-home-fragment.html
 #: openedx/features/course_experience/templates/course_experience/course-home-fragment.html
