--- a/conf/locale/fr/LC_MESSAGES/django.po
+++ b/conf/locale/fr/LC_MESSAGES/django.po
@@ -24218,7 +24218,7 @@ msgstr "Dates à venir"
 #: themes/st-lutherx/lms/templates/courseware/accordion.html
 #: themes/st-normanx/lms/templates/courseware/accordion.html
 msgid "Overview"
-msgstr "Vérifier"
+msgstr "Sommaire"
 
 #: openedx/features/course_experience/templates/course_experience/course-home-fragment.html
 msgid "Goal: "
