--- a/conf/locale/config.yaml
+++ b/conf/locale/config.yaml
@@ -44,6 +44,8 @@ ignore_dirs:
     - src/pystache-custom
     - src/rate-xblock
     - src/xblock-google-drive
+    # Ignore the file we use translations are not setup.
+    - common/static/js/src/gettext_fallback.js
 
 
 # Third-party installed apps that we also extract strings from.  When adding a
