fix: adds starting '¿' to es_419 ask's string

--- a/conf/locale/es_419/LC_MESSAGES/djangojs.po
+++ b/conf/locale/es_419/LC_MESSAGES/djangojs.po
@@ -9060,7 +9060,7 @@ msgstr "Crear una cuenta"
 
 #: lms/templates/student_account/login.underscore
 msgid "First time here?"
-msgstr "Primera vez aquí?"
+msgstr "¿Primera vez aquí?"
 
 #: lms/templates/student_account/login.underscore
 msgid "Create an Account."
